--- a/src/EmpresaBundle/Resources/views/Empresa/all.html.twig
+++ b/src/EmpresaBundle/Resources/views/Empresa/all.html.twig
@@ -1,27 +1,20 @@
+{%  extends '::base.html.twig' %}
+
+
+  {% block title %}Info Empresas
+
+
+  {% endblock %}
 
 
 
 
-<!DOCTYPE html>
-<html>
-<head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Info Empresas{% endblock %}</title>
-        {% block stylesheets %}
-
-                <link rel = stylesheet  href="{{ asset('css/estilos.css') }}" />
-
-        {% endblock %}
-
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-</head>
-<body>
 {% block body %}
 
-
+<div class="col-md-9">
         <h1>Empresas</h1>
 
-        <table >
+        <table>
                 <tr>
                         <th>#</th>
                         <th>Nombre</th>
@@ -45,17 +38,10 @@
                         </tr>
                 {% endfor %}
         </table>
-
-
-{% endblock %}
-
-
-{% block javascripts %}
-
+</div>
 
 {% endblock %}
-</body>
-</html>
+
 
 
 
