Add new table and relations in bbdd

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,9 +35,9 @@
             <h1 id="menu">Menú</h1>
             <div class="its_menu">
                 <ul id="sidebar" class="nav nav-pills nav-stacked" style="max-width: 200px;">
-                    <li class="active"><a href="http://localhost:8000/Empresa/all"><span class="glyphicon glyphicon-off"></span>Empresas</a></li>
-                    <li><a href="http://localhost:8000/Alumnos/all"><span class="glyphicon glyphicon-user"></span>Alumnos</a></li>
-                    <li><a href="http://localhost:8000/Empresa/new"><span class="glyphicon glyphicon-lock"></span>Añadir empresa</a></li>
+                    <li class="active"><a href="http://localhost:8000/Empresa/all"><span class="glyphicon glyphicon-briefcase"></span>  Empresas</a></li>
+                    <li><a href="http://localhost:8000/Alumnos/all"><span class="glyphicon glyphicon-user"></span>  Alumnos</a></li>
+                    <li><a href="http://localhost:8000/Empresa/new"><span class="glyphicon glyphicon-plus"></span>  Añadir empresa</a></li>
 
 
                 </ul>
