--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -5,11 +5,13 @@
 table {
     border-collapse: collapse;
     width: 100%;
+    margin-left: 80px;
+    margin-top: 30px;
 
 }
 th {
-    background-color: #778899;
-    color: white;
+    background-color: #ffffff;
+    color: #0a0a0a;
     border: 1px solid black;
     text-align: center;
 }
@@ -17,8 +19,10 @@ th {
 th, td {
     border: 1px solid black;
     text-align: center;
+    padding: 10px;
 }
-tr:nth-child(even) {background-color: #f2f2f2}
+tr:nth-child(even) {background-color: #ffffff
+}
 
 #menu{
 
