Add Json to Get and Post

--- a/src/EmpresaBundle/Resources/views/Empresa/all.html.twig
+++ b/src/EmpresaBundle/Resources/views/Empresa/all.html.twig
@@ -25,7 +25,7 @@
                         <th>Fecha insertada</th>
 
                 </tr>
-                {% for empresa in empresas %}
+                {% for empresa in todasempresas %}
                         <tr>
                                 <td>{{ empresa.id }}</td>
                                 <td>{{ empresa.nombre }}</td>
