--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,6 +38,8 @@
                     <li class="active"><a href="http://localhost:8000/Empresa/all"><span class="glyphicon glyphicon-briefcase"></span>  Empresas</a></li>
                     <li><a href="http://localhost:8000/Alumnos/all"><span class="glyphicon glyphicon-user"></span>  Alumnos</a></li>
                     <li><a href="http://localhost:8000/Empresa/new"><span class="glyphicon glyphicon-plus"></span>  Añadir empresa</a></li>
+                    <li><a href="http://localhost:8000/Profesor/all"><span class="glyphicon glyphicon-zoom-in"></span> Profesores</a></li>
+                    <li><a href="http://localhost:8000/Profesor/new"><span class="glyphicon glyphicon-align-justify"></span>  Añadir Profesor</a></li>
 
 
                 </ul>
