--- a/src/EmpresaBundle/Resources/views/Empresa/alumnosAll.html.twig
+++ b/src/EmpresaBundle/Resources/views/Empresa/alumnosAll.html.twig
@@ -23,6 +23,7 @@
                         <th>Segundo apellido</th>
                         <th>Costa</th>
                         <th>Empresa</th>
+                        <th>Profesor</th>
 
 
                     </tr>
@@ -34,6 +35,7 @@
                             <td>{{ alumno.apellido2 }}</td>
                             <td>{{ alumno.ciclo }}</td>
                             <td>{{ alumno.empresa.nombre }}</td>
+                            <td>{{ alumno.profesor.nombre }}</td>
 
                         </tr>
                     {% endfor %}
