--- a/src/UserBundle/Resources/views/Default/login.html.twig
+++ b/src/UserBundle/Resources/views/Default/login.html.twig
@@ -1,41 +1,126 @@
-{% extends '::default/baseUser.html.twig' %}
-{% block user %}{% endblock %}
-{% block contains %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">Login</div>
-                <div class="panel-body">
-                    <div class="col-md-12" id="login">
-                        <form action="{{ path('login') }}" method="post">
-                            <div class="form-group">
-                                <label for="username">Username:</label>
-                                <input type="text" id="username" class="form-control" name="_username" value="{{ last_username }}"/>
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password:</label>
-                                <input type="password" id="password" class="form-control" name="_password"/>
-                            </div>
-                            <div class="form-group">
-                                <input type="checkbox" id="remember_me" name="_remember_me" />
-                                <label for="remember_me">Rememberme</label>
-                            </div>
-                            {#
-                                If you want to control the URL the user
-                                is redirected to on success (more details below)
-                                <input type="hidden" name="_target_path" value="/account" />
-                            #}
-                            <div class="form-group">
-                                <button type="submit" id="usuario_Acceder" class="btn btn-default">Login</button>
+
+
+
+{# app/Resources/views/security/login.html.twig #}
+{# ... you will probably extend your base template, like base.html.twig #}
+
+{% if error %}
+    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+{% endif %}
+
+
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Bootstrap Login Form Template</title>
+
+<!-- CSS -->
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
+<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="assets/css/form-elements.css">
+<link rel="stylesheet" href="assets/css/style.css">
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
+
+<!-- Favicon and touch icons -->
+<link rel="shortcut icon" href="assets/ico/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+
+
+
+
+
+{#
+    If you want to control the URL the user
+    is redirected to on success (more details below)
+    <input type="hidden" name="_target_path" value="/account" />
+#}
+
+
+
+
+
+
+
+<!-- Top content -->
+<div class="top-content">
+    <form action="{{ path('login') }}" method="post">
+        <div class="inner-bg">
+            <div class="container">
+                <div class="row">
+
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-sm-offset-3 form-box">
+                        <div class="form-top">
+                            <div class="form-top-left">
+                                <h3>Login to our site</h3>
+                                <p>Enter your username and password to log on:</p>
 
                             </div>
-                        </form>
+                            <div class="form-top-right">
+                                <i class="fa fa-lock"></i>
+                            </div>
+                        </div>
+                        <div class="form-bottom">
+                            <form role="form" action="" method="post" class="login-form">
+                                <div class="form-group">
+                                    <label class="sr-only" for="username">Username:</label>
+                                    <input class="form-username form-control" placeholder="Username..." type="text" id="username" name="_username" value="{{ last_username }}" />
+                                </div>
+                                <div class="form-group">
+                                    <label class="sr-only" for="password">Password</label>
+                                    <input type="password" placeholder="Password..." id="password" name="_password"  class="form-password form-control" />
+                                </div>
+
+                                <div class="checkbox">
+                                    <input type="checkbox" id="remember_me" name="_remember_me">
+                                    <label for="remember_me">Recuerdame</label>
+                                </div>
+
+                                <input type="hidden" name="_target_path" value="all_Alumnos" />
+                                <button type="submit" class="btn" >Sign in</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-sm-offset-3 social-login">
+                        <h3>...or login with:</h3>
+                        <div class="social-login-buttons">
+                            <a class="btn btn-link-2" href="#">
+                                <i class="fa fa-facebook"></i> Facebook
+                            </a>
+                            <a class="btn btn-link-2" href="#">
+                                <i class="fa fa-twitter"></i> Twitter
+                            </a>
+                            <a class="btn btn-link-2" href="#">
+                                <i class="fa fa-google-plus"></i> Google Plus
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div><!-- /.col-->
-    </div><!-- /.row -->
-{% endblock %}
+        </div>
+    </form>
+</div>
+
+
+<!-- Javascript -->
+<script src="assets/js/jquery-1.11.1.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.backstretch.min.js"></script>
+<script src="assets/js/scripts.js"></script>
+
+<!--[if lt IE 10]>
+<script src="assets/js/placeholder.js"></script>
+<![endif]-->
