--- a/src/UserBundle/Resources/views/Default/login.html.twig
+++ b/src/UserBundle/Resources/views/Default/login.html.twig
@@ -1,6 +1,4 @@
 
-
-
 {# app/Resources/views/security/login.html.twig #}
 {# ... you will probably extend your base template, like base.html.twig #}
 
@@ -15,11 +13,13 @@
 <title>Bootstrap Login Form Template</title>
 
 <!-- CSS -->
+
+<link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" type="text/css" rel="stylesheet"/>
+<link href="{{ asset('assets/font-awesome/css/font-awesome.min.css') }}" type="text/css" rel="stylesheet"/>
+<link href="{{ asset('assets/css/form-elements.css') }}" type="text/css" rel="stylesheet"/>
+<link href="{{ asset('assets/css/style.css') }}" type="text/css" rel="stylesheet"/>
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
-<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
-<link rel="stylesheet" href="assets/css/form-elements.css">
-<link rel="stylesheet" href="assets/css/style.css">
+
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -76,10 +76,16 @@
                                 <div class="form-group">
                                     <label class="sr-only" for="username">Username:</label>
                                     <input class="form-username form-control" placeholder="Username..." type="text" id="username" name="_username" value="{{ last_username }}" />
+                                    {% if error %}
+                                        <div class="text-danger">{{ error.message }}</div>
+                                    {% endif %}
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="password">Password</label>
                                     <input type="password" placeholder="Password..." id="password" name="_password"  class="form-password form-control" />
+                                    {% if error %}
+                                        <div class="text-danger">{{ error.message }}</div>
+                                    {% endif %}
                                 </div>
 
                                 <div class="checkbox">
